# cybersec-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  fuzz.py  locustfile.py  pyproject.toml  requirements.dev.fuzz.txt  requirements.dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql.yml  dependency-review.yml
app/auth/: __init__.py
app/db/: __init__.py  auth.py
app/invest/: __init__.py
app/models/: auth.py
app/routers/: auth.py  db.py  invest.py
tests/: fuzzer.py
