[metadata]
name = cybersec
description = Cybersecurity project
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexander Loginov
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
install_requires =
    databases[aiosqlite]
    fastapi[all]
    passlib[bcrypt]
    python-jose[cryptography]
    sentry-sdk[fastapi]
    sqlalchemy
    tinkoff-investments
python_requires = >=3.10
package_dir =
    =app
zip_safe = no

[options.extras_require]
testing =
    flake8
    locust
    pre-commit
    pytest
    pytest-cov
    pythonfuzz
    tox

[options.package_data]
cybersec = py.typed
